<resources>
    <string name="app_name">SMOP</string>
    <string name="item_clustering">Clustering</string>
    <string name="item_heat_map">Heat Map</string>
    <string name="item_polylines">Polyline Decoding</string>
    <string name="item_spherical_geometry">Spherical Geometry Utils</string>

    <string-array name="list_items">
        <item>@string/item_clustering</item>
        <item>@string/item_heat_map</item>
        <item>@string/item_polylines</item>
        <item>@string/item_spherical_geometry</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="check_in">MASUK VIA GEO TAG</string>
    <string name="maps">Maps</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="karyawan">KARYAWAN</string>
    <string name="message_check">Silahkan Masuk untuk Presensi</string>
    <string name="qr_code_check_in">MASUK VIA KODE QR</string>
    <string name="izin">Izin</string>
    <string name="runtime_permissions_txt">Please enable ALL permissions from app settings.</string>
    <string name="tanggal_mulai">Tanggal Mulai Izin</string>
    <string name="lebih_hari">Lebih dari sehari</string>
    <string name="tanggal_akhir">Tanggal Akhir Izin</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="alasan_izin">Alasan Izin</string>
    <string name="izin_sekarang">Ajukan Izin</string>
    <string name="smop">SMOP</string>
    <string name="smop_skt">Sistem Manajemen Otret Presensi</string>
</resources>
